tests/NormalTests/paczka1/small_fuzzy/20397468.err
Error in line 2: P1lW3yJ S769 82,2
Error in line 3: P1lW3yJ S255 75,4
